# backend/api/controllers/ratingControllers.go
@@ -14,10 +14,10 @@ type createRatingInput struct {
 }
 
 type RatingOutput struct {
-	CreatedAt string  `json:"created_at"`
-	RaterID   uint    `json:"rater_id"`
-	RatedID   uint    `json:"rated_id"`
-	Rate      float64 `json:"rate"`
+	CreatedAt     string  `json:"created_at"`
+	RaterUsername string  `json:"rater_username"`
+	RatedUsername string  `json:"rated_username"`
+	Rate          float64 `json:"rate"`
 }
 
 // @Summary Create a new rating
@@ -52,8 +52,8 @@ func CreateRating(c *gin.Context) {
 		return
 	}
 	var rating models.Rating
-	rating.RatedID = ratedUser.ID
-	rating.RaterID = user.ID
+	rating.RatedUsername = ratedUser.Username
+	rating.RaterUsername = user.Username
 	rating.Rate = body.Rate
 	result := initializers.DB.Create(&rating)
 	if result.Error != nil {
@@ -73,8 +73,8 @@ func CreateRating(c *gin.Context) {
 // @Param per_page query int false "Per page"
 // @Param order_by query string false "Order by"
 // @Param order query string false "Order"
-// @Param rater_id query int false "Rater ID"
-// @Param rated_id query int false "Rated ID"
+// @Param rater_username query string false "Rater username"
+// @Param rated_username query string false "Rated username"
 // @Security ApiKeyAuth
 // @Success 200 {string} string "Ratings"
 // @Router /rating/list [get]
@@ -83,8 +83,8 @@ func RatingList(c *gin.Context) {
 	page := c.DefaultQuery("page", "1")
 	perPage := c.DefaultQuery("per_page", "10")
 	orderBy := c.DefaultQuery("order_by", "created_at")
-	raterID := c.DefaultQuery("rater_id", "-1")
-	ratedID := c.DefaultQuery("rated_id", "-1")
+	raterUsername := c.DefaultQuery("rater_username", "")
+	ratedUsername := c.DefaultQuery("rater_username", "")
 	order := c.DefaultQuery("order", "desc")
 	pageNum, err := strconv.Atoi(page)
 	if err != nil {
@@ -98,21 +98,11 @@ func RatingList(c *gin.Context) {
 	}
 	startIdx := (pageNum - 1) * perPageNum
 	querySet := initializers.DB.Model(&models.Rating{}).Limit(perPageNum).Offset(startIdx).Order(orderBy + " " + order)
-	if ratedID != "-1" {
-		ratedIDNum, err := strconv.Atoi(ratedID)
-		if err != nil {
-			c.JSON(400, gin.H{"error": "Rated ID must be a number"})
-			return
-		}
-		querySet = querySet.Where("rated_id = ?", ratedIDNum)
+	if raterUsername != "" {
+		querySet = querySet.Where("rated_username = ?", raterUsername)
 	}
-	if raterID != "-1" {
-		raterIDNum, err := strconv.Atoi(raterID)
-		if err != nil {
-			c.JSON(400, gin.H{"error": "Rater ID must be a number"})
-			return
-		}
-		querySet = querySet.Where("rater_id = ?", raterIDNum)
+	if raterUsername != "" {
+		querySet = querySet.Where("rater_id = ?", ratedUsername)
 	}
 	querySet.Find(&ratings)
 	c.JSON(200, gin.H{"ratings": ratings})
